--- a/guide.html
+++ b/guide.html
@@ -223,12 +223,12 @@
 </head>
 
 <body data-page="guide">
-    <!-- Mobile Blocker -->
-    <div id="mobile-block-overlay">
-        <i class="fa-solid fa-desktop"></i>
-        <h2>Masaüstü Deneyimi Gereklidir</h2>
-        <p>Finansal verilerinizi detaylı analiz edebilmeniz için lütfen bu uygulamayı geniş ekranlı bir bilgisayarda
-            kullanın.</p>
+    <!-- Resolution Warning Banner (Soft Warning) -->
+    <div id="resolution-blocker">
+        <i class="fa-solid fa-triangle-exclamation res-icon"></i>
+        <span class="res-message"><strong>⚠️ DİKKAT:</strong> Ekran çözünürlüğünüz yetersiz! Uygulama
+            <strong>1366×768</strong> altında <em>bozuk görünebilir</em> ve <em>düzgün çalışmayabilir</em>. Tarayıcı
+            yakınlaştırmasını azaltın veya daha büyük ekran kullanın.</span>
     </div>
 
     <div class="web-app-container">
@@ -545,6 +545,7 @@
             </div>
         </main>
     </div>
+
     <script src="main.js?v=21"></script>
 </body>
 
