--- a/settings.html
+++ b/settings.html
@@ -11,13 +11,12 @@
 </head>
 
 <body data-page="settings">
-    <!-- Resolution Blocker (Hard Limit) -->
+    <!-- Resolution Warning Banner (Soft Warning) -->
     <div id="resolution-blocker">
-        <i class="fa-solid fa-desktop"></i>
-        <h2>Yetersiz Ekran Çözünürlüğü</h2>
-        <p>Bu uygulama en verimli <strong>1920x1080</strong> çözünürlükte çalışır.</p>
-        <div class="res-badge">Minimum Gereksinim: 1366 x 768 px</div>
-        <p style="font-size:0.9rem; margin-top:15px; opacity:0.7;">Şu anki ekranınız bu sınırın altında.</p>
+        <i class="fa-solid fa-triangle-exclamation res-icon"></i>
+        <span class="res-message"><strong>⚠️ DİKKAT:</strong> Ekran çözünürlüğünüz yetersiz! Uygulama
+            <strong>1366×768</strong> altında <em>bozuk görünebilir</em> ve <em>düzgün çalışmayabilir</em>. Tarayıcı
+            yakınlaştırmasını azaltın veya daha büyük ekran kullanın.</span>
     </div>
 
     <div class="web-app-container">
@@ -47,13 +46,12 @@
                         <button class="btn-modern-outline" onclick="downloadBackup()">
                             <i class="fa-solid fa-download"></i> Yedek İndir (JSON)
                         </button>
-                        <div style="position:relative; flex:1;">
-                            <button class="btn-modern-outline" onclick="document.getElementById('import-file').click()">
-                                <i class="fa-solid fa-file-import"></i> Yedek Yükle
-                            </button>
-                            <input type="file" id="import-file" style="display:none" onchange="restoreBackup(this)"
-                                accept=".json">
-                        </div>
+                        <button class="btn-modern-outline" onclick="changeSyncFile()">
+                            <i class="fa-solid fa-folder-open"></i> Yedek Dosyası Seç
+                        </button>
+                        <!-- Hidden File Input for Restore -->
+                        <input type="file" id="restore-file-input" accept=".json" style="display: none;"
+                            onchange="window.restoreBackup(event)">
                     </div>
                 </div>
 
